--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"scripts":{"dev":"tsx --watch src/main.ts"},"dependencies":{"dotenv":"^16.5.0","express":"^5.1.0","mongoose":"^8.15.1","mysql2":"^3.14.1","typescript":"^5.8.3"},"devDependencies":{"@types/dotenv":"^6.1.1","@types/express":"^5.0.2","@types/node":"^22.15.21","tsx":"^4.19.4"}}
+{"scripts":{"dev":"tsx --watch src/main.ts"},"dependencies":{"dotenv":"^16.5.0","express":"^5.1.0","mongoose":"^8.15.1","mysql2":"^3.14.1","typescript":"^5.8.3"},"devDependencies":{"@types/dotenv":"^6.1.1","@types/express":"^5.0.2","@types/node":"^22.15.21","prisma":"^6.9.0","tsx":"^4.19.4"}}
