--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
     "dev": "tsx --watch src/main.ts"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "mysql2": "^3.14.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
